SERVER-13206: do not abort secondary on index creation conflict